[project]
name = "info-vis"
version = "0.1.0"
description = "Info visualisation project. Dublin property prices and trees."
requires-python = ">=3.9"
dependencies = [
    "altair>=6.0.0",
    "geopandas>=1.0.1",
    "geopy>=2.4.1",
    "jupyterlab>=4.5.6",
    "matplotlib>=3.9.4",
    "pandas>=2.3.3",
    "tqdm>=4.67.3",
]
